Tue Jun 21 12:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/RTScheduling/Current/Thread_Task.cpp:
          Layout fixes

Tue Jun 21 11:18:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.h:
          Added a todo for client_request_interceptors and
          server_request_interceptors methods that these should be removed
          when RTCosScheduling doesn't use them anymore

Tue Jun 21 10:58:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Interceptor_List.{h,cpp}:
          Added destroy_interceptors method that goes through the list of
          interceptors and calls destroy on each interceptor

        * tao/IORInterceptor_Adapter.h:
          Removed empty throw spec from destroy_interceptors and removed the
          interceptor_list method which returns the list build up, this is
          internal data which the outside doesn't need to have.

        * tao/ORB_Core.{h,cpp} (destroy_interceptors):
          Use the new destoy_interceptors of the Interceptor_List template

        * tao/IORInterceptor/IORInterceptor_Adapter_Impl.{h,cpp}:
          Use the new destoy_interceptors of the Interceptor_List template
          and removed interceptor_list method

Tue Jun 21 08:22:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORBInitializer_Registry_Adapter.h:
          Added export macro.

Mon Jun 20 23:17:42 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.cpp:
        * orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Service.cpp:
        * orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.cpp:
        * orbsvcs/Logging_Service/RTEvent_Logging_Service/RTEvent_Logging_Service.cpp:

          Fixed fuzz build errors related to missing ACE_ENV_ARG_PARAMETER
	  in call to resolve_initial_references().

Mon Jun 20 21:49:02 2005  J.T. Conklin  <jtc@acorntoolworks.com>
